--- a/badge_on_menu/static/description/index.html
+++ b/badge_on_menu/static/description/index.html
@@ -3,7 +3,7 @@
 		<h2 class="oe_slogan">Show Pending Schedule Activity Counmter badge on Odoo menu</h2>
 		<h4 class="oe_slogan" style="font-size: 23px;"><a href="https://www.codersfort.com">CodersFort</a></h4>
 		<div>
-            <p style="text-align: center;">This module helps you to Show Pending Schedule Activity Counmter badge on Odoo menu</p>
+            <p style="text-align: center;">This module helps you to Show Pending Schedule Activity Counter badge on Odoo menu</p>
         </div>
 	</div>
 </section>
